# extensible-config

./: LICENSE  README.md  extensible-config.cabal
src-test/: Main.hs
src/Data/Extensible/: Config.hs
