name:                extensible-config
version:             0.1.0.0
-- synopsis:
-- description:

license:             ISC
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           © 2017 Will Fancher
homepage:            https://github.com/ElvishJerricco/extensible-config
bug-reports:         https://github.com/ElvishJerricco/extensible-config/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/extensible-config

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Data.Extensible.Config
  build-depends:     base >= 4.8 && < 5
                   , lens
                   , mtl

test-suite extensible-config-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , extensible-config
                   , lens
                   , mtl

